--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -323,11 +323,11 @@
 #endif
 
 #if defined(CPUARM)
-  #define TR_CUSTOMSW          "CS1""CS2""CS3""CS4""CS5""CS6""CS7""CS8""CS9""CSA""CSB""CSC""CSD""CSE""CSF""CSG""CSH""CSI""CSJ""CSK""CSL""CSM""CSN""CSO""CSP""CSQ""CSR""CSS""CST""CSU""CSV""CSW"
+  #define TR_CUSTOMSW          "LB1""LB2""LB3""LB4""LB5""LB6""LB7""LB8""LB9""LBA""LBB""LBC""LBD""LBE""LBF""LBG""LBH""LBI""LBJ""LBK""LBL""LBM""LBN""LBO""LBP""LBQ""LBR""LBS""LBT""LBU""LBV""LBW"
 #elif defined(PCBGRUVIN9X) || defined(CPUM2561) || defined(CPUM128)
-  #define TR_CUSTOMSW          "CS1""CS2""CS3""CS4""CS5""CS6""CS7""CS8""CS9""CSA""CSB""CSC""CSD""CSE""CSF"
+  #define TR_CUSTOMSW          "LB1""LB2""LB3""LB4""LB5""LB6""LB7""LB8""LB9""LBA""LBB""LBC""LBD""LBE""LBF"
 #else
-  #define TR_CUSTOMSW          "CS1""CS2""CS3""CS4""CS5""CS6""CS7""CS8""CS9""CSA""CSB""CSC"
+  #define TR_CUSTOMSW          "LB1""LB2""LB3""LB4""LB5""LB6""LB7""LB8""LB9""LBA""LBB""LBC"
 #endif
 
 #if defined(PCBTARANIS)
@@ -394,10 +394,10 @@
 #define TR_LOADINGMODEL        "Laddar Modell   "
 #define TR_NAME                "Namn"
 #define TR_MODELNAME           "Modellnamn"
-#define TR_PHASENAME           "Modnamn   "
+#define TR_PHASENAME           "Lägesnamn "
 #define TR_MIXNAME             "Mixnamn "
 #if defined(PCBTARANIS)
-  #define TR_EXPONAME          "Line Name"
+  #define TR_EXPONAME          "Linjenamn"
 #else
   #define TR_EXPONAME          "Exponamn"
 #endif
@@ -543,7 +543,7 @@
 #define TR_MENUHELISETUP       "Helikopter"
 
 #if defined(PCBTARANIS)
-  #define TR_MENUINPUTS        "INPUTS"
+  #define TR_MENUINPUTS        "Filter"
   #define TR_MENULIMITS        "Gränser"
 #elif defined(PPM_CENTER_ADJUSTABLE) || defined(PPM_LIMITS_SYMETRICAL) // The right menu titles for the gurus ...
   #define TR_MENUINPUTS        "Spakar" 
@@ -768,6 +768,6 @@
 #define TR_BG_VOLUME           "Volym Bg"
 
 #define TR_TOP_BAR             "Top Bar"
-#define TR_ALTITUDE            INDENT "Altitude"
-#define TR_MODS_FORBIDDEN      "Modifications forbidden!"
-#define TR_UNLOCKED            "Unlocked"
+#define TR_ALTITUDE            INDENT "Höjd"
+#define TR_MODS_FORBIDDEN      "Modifikationer förbjudna!"
+#define TR_UNLOCKED            "Olåst"
